--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ img {
   border: 2px solid black;
 }
 
-p {
+/* p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   font-size: 25px;
@@ -34,7 +34,7 @@ p {
   margin-left: 10px;
   margin-right: 10px;
   overflow-wrap: break-word;
-}
+} */
 
 .msg {
   display: flex;
@@ -45,12 +45,45 @@ p {
   align-items: center;
 }
 
+.u-name{
+    font-size: 15px;
+    margin: 0;
+    margin-left: 5px;
+}
+.sent .message-info span{
+    font-size: 10px;
+    padding: 0 15px;
+    padding-left: 30px;
+}
+.received .message-info span{
+    font-size: 10px;
+    padding: 0 15px;
+    padding-right: 28px;
+}
+.received .u-name{
+    margin-left: 0;
+}
+
+
+.message-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.msg-text{
+    font-weight: 500;
+    font-size: 25px;
+    padding: 5px
+}
+
 .sent {
   background-color: #395dff;
   color: white;
   border-top-right-radius: 1000px;
   flex-direction: row-reverse;
-  padding: 20px 20px 0 10px;
+  padding: 20px 20px 0 27px;
   text-align: end;
   float: right;
 }
@@ -60,6 +93,11 @@ p {
   background-color: #FAFAFA;
   border-top-left-radius: 1000px;
   float: left;
+  padding: 20px 27px 0 20px;
+}
+
+.received .message-info{
+    flex-direction: row-reverse;
 }
 
 .sendMsg {
@@ -76,7 +114,8 @@ p {
 }
 
 .msgs {
-  margin: 110px 0;
+  padding-top: 100px;
+  padding-bottom: 170px;
   display: flex;
   flex-direction: column;
 }
@@ -88,33 +127,40 @@ p {
 }
 
 @media (max-width: 775px) {
-  p {
-    font-size: 20px;
+  .msg-text {
+    font-size: 22px;
+  }
+  .message-info span, .message-info .u-name{
+    font-size: 12px;
   }
   ul{
     width: 100%;
 }
   .sent {
-    padding: 10px 10px 0 10px;
+    padding: 10px 10px 0 18px;
   }
   .received {
-    padding: 10px 10px 0 10px;
+    padding: 10px 18px 0 10px;
   }
   img {
     height: 35px;
+    width: 35px;
     margin-top: -10px;
   }
 }
 
 @media (max-width: 500px) {
-  p {
-    font-size: 15px;
+  .msg-text {
+    font-size: 17px;
+  }
+    .message-info span, .message-info .u-name{
+    font-size: 10px;
   }
   .sent {
-    padding: 7px 7px 0 7px;
+    padding: 7px 7px 0 18px;
   }
   .received {
-    padding: 7px 7px 0 7px;
+    padding: 7px 18px 0 7px;
   }
   img {
     height: 30px;
