--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,17 @@
     margin: 0;;
 }
 
+.header{
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  width: 100%;
+  background-color: #FAFAFA;
+  top: 0;
+  border-bottom: 'solid 1px lightgray';
+  z-index: 10;
+}
+
 .chatbox{
     width: 100%;
     height: 93vh;
@@ -25,16 +36,6 @@ img {
   margin-top: -20px;
   border: 2px solid black;
 }
-
-/* p {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 500;
-  font-size: 25px;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  overflow-wrap: break-word;
-} */
 
 .msg {
   display: flex;
@@ -107,7 +108,6 @@ img {
   bottom: 0;
   z-index: 1;
   border-top: 1px solid lightgray;
-  margin-left: -5px;
   padding: 10px;
   padding-bottom: 30px;
   background-color: #fafafa;
@@ -153,7 +153,7 @@ img {
   .msg-text {
     font-size: 17px;
   }
-    .message-info span, .message-info .u-name{
+  .message-info span, .message-info .u-name{
     font-size: 10px;
   }
   .sent {
@@ -164,6 +164,7 @@ img {
   }
   img {
     height: 30px;
+    width: 30px;
     margin-top: -7px;
   }
 }
